--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,9 +12,9 @@
             <img src="assets/images/about-us.gif" alt="" class="w-100">
             <div>
                 <p>
-                    WAVERITY provides cutting-edge and comprehensive solutions for the energy sector and remote
-                    sensing systems industry to address their complex challenges by application of sophisticated
-                    mathematical and computational techniques including non-linear data processing, advanced Artificial
+                    WAVERITY provides cutting-edge and comprehensive solutions for the energy sector and remote sensing
+                    systems industry to address their complex challenges through the application of sophisticated
+                    mathematical and computational techniques, including non-linear data processing, advanced Artificial
                     Intelligence, Deep Learning, and statistical analysis.
                     <br>
                     <br>
