--- a/src/app/technology/technology.component.html
+++ b/src/app/technology/technology.component.html
@@ -2,10 +2,9 @@
     <h1>TECHNOLOGY</h1>
     <div class="hr"></div>
     <p class="tech_p">
-        Our products aim to empower business to tackle their complex problems via application of sophisticated
-        mathematical and
-        computational techniques including non-linear data processing, advance artificial intelligence and statistical
-        analysis.
+        Our products aim to empower businesses to tackle their complex problems via the application of sophisticated
+        mathematical and computational techniques, including non-linear data processing, advanced artificial
+        intelligence and statistical analysis.
     </p>
     <div class="section-full">
         <div class="time-line ">
@@ -50,8 +49,8 @@
                         </div>
                         <div class="paragraph-left para">
                             <p class="font-16 left-paragraph para3">Implementation of enhanced statistical methods
-                                inside our developments plays a crucial role during the data collection and analysis as
-                                well as an effective representation of results.
+                                within our developments is critical during data collection and analysis, as well as the
+                                effective representation of results.
                             </p>
                         </div>
                     </div>
@@ -67,7 +66,7 @@
                         </div>
                         <div class="paragraph-right para1">
                             <p class="right-paragraph para4">Advanced processing algorithms enable extracting,
-                                analyzing and manipulating information embedded in complex signals and images. They
+                                analyzing, and manipulating information embedded in complex signals and images. They
                                 allow the extraction of valuable insights via the enhancement of the true signals
                                 present in the original data.</p>
                         </div>
