contact form update

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -41,14 +41,14 @@
                   <label for="">Email Address</label>
               </div>
               <div class="input-data">
-                  <input type="phone" name="phone" required>
+                  <input type="phone" name="Phone" required>
                   <div class="underline"></div>
                   <label for="">Phone Number</label>
               </div>
           </div>
           <div class="form-row">
               <div class="input-data textarea">
-                  <textarea rows="8" cols="80" name="message" required></textarea>
+                  <textarea rows="8" cols="80" name="Message" required></textarea>
                   <br />
                   <div class="underline"></div>
                   <label for="">Write your message</label>
