--- a/src/styles.css
+++ b/src/styles.css
@@ -512,12 +512,12 @@ input[type=text]::placeholder {
 	outline: none;
 	color: #000;
 	padding: 12.5px 35px;
-	border: 2px solid  #00aaff;
+	border: 2px solid #00aaff;
 }
 
 .button-submit button:hover {
-	color: #00aaff;
-	background:  #00aaff;
+	color: #000;
+	background: #00aaff;
 	transition-duration: 600ms;
 }
 
