--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -17,6 +17,11 @@ p {
     padding-left: 20px;
 }
 
+iframe {
+    width: 100%;
+    min-width: 600px !important;
+}
+
 button {
     display: flex;
     margin: 30px auto 0 auto;
@@ -58,6 +63,11 @@ h6 {
         padding-left: 0;
         margin-top: 20px;
         font-size: 14px;
+    }
+
+    iframe {
+        width: 100%;
+        min-width: 300px !important;
     }
 
     .border-end {
