--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
     <div class="container animate__fadeInUp animate__animated">
         <div
             class="d-flex about-us m-1 flex-column flex-sm-column flex-lg-row justify-content-center align-items-center">
-            <iframe class="m-auto" height="415" src="https://www.youtube.com/embed/oeGOdbIfXIk?autoplay=1&mute=1" title="YouTube video player"
+            <iframe class="m-auto" height="415" src="https://www.youtube.com/embed/oeGOdbIfXIk?autoplay=1&mute=1&loop=1&playlist=oeGOdbIfXIk" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; mute; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
