--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
     <div id="contact-button"><button (click)="openLg(content)">Contact Us</button></div>
   </footer>
   <div class="container credits">
-    <h5>2022 © WAVERITY. All rights reserved.</h5>
+    <h5>&nbsp;2023 © WAVERITY. All rights reserved.</h5>
     <!-- <h5>Designed and Developed by <a href="">XALIZADEX</a></h5> -->
   </div>
 </div>
