--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -94,12 +94,16 @@ a.active {
   flex-direction: row;
   justify-content: space-between; */
   text-align: center;
-  margin-top: 20px;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  position: relative;
+  margin: auto;
 }
 
 .credits h5 {
   font-weight: 400;
-  font-size: 0.6em;
+  font-size: 0.7em;
+  color: #ffffff;
 }
 
 .credits h5 a {
