--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     <div class="navbar collapse navbar-collapse mt-3 desktop" id="navbarSupportedContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item dropdown active">
-          <a class="nav-link" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+          <a class="nav-link" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" routerLink="/oil/1"
             [ngClass]="{'active': oilLink.isActive || rssLink.isActive || customLink.isActive}">
             Solutions
           </a>
