--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12 border-end border-2">
                 <h4>Address</h4>
-                <h6>Kovkab Safaraliyeva 12h, Floor 2</h6>
+                <h6>Keykab Khanim Safaraliyeva 14, Floor 2</h6>
             </div>
             <div class="col-lg-4 col-sm-12 border-end border-2">
                 <h4>Phone</h4>
