--- a/src/app/careers/careers.component.html
+++ b/src/app/careers/careers.component.html
@@ -11,7 +11,7 @@
     <!-- Vacancies -->
 
     <div class="container row vacancies">
-        <!-- <div class="vacancy col-lg-3 col-md-4 col-sm-12" (click)="navigateTo(data.link)"
+        <div class="vacancy col-lg-3 col-md-4 col-sm-12" (click)="navigateTo(data.link)"
             style="--animation-order: {{ data.id }}" *ngFor="let data of careers">
             <div class="details">
                 <h3>{{ data.name }}</h3>
@@ -21,9 +21,9 @@
             <div *ngIf="isVacancyDetailsVisible">
 
             </div>
-        </div> -->
-        <h1 class="text-center mt-5">
+        </div>
+        <!--<h1 class="text-center mt-5">
             Currently, we do not have any available<br>job openings to offer at this time.
-        </h1>
+        </h1> -->
     </div>
 </div>
