Footer link activate

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
       <ul>
         <li><a routerLink="/news" routerLinkActive="active">News</a></li>
         <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-        <li><a routerLinkActive="active">Careers</a></li>
+        <li><a routerLink="/careers" routerLinkActive="active">Careers</a></li>
       </ul>
     <div id="contact-button"><button (click)="openLg(content)">Contact Us</button></div>
   </footer>
