Log Cube Commit

--- a/src/app/oil-details/oil-details.component.html
+++ b/src/app/oil-details/oil-details.component.html
@@ -132,5 +132,75 @@
             <video src="assets/videos/Schematic_S.I.N.A..mp4" autoplay muted loop playsinline preload="auto"
                 onloadedmetadata="this.muted = true" width="100%"></video>
         </div>
+
+        <div class="sina" *ngIf="oil.id == 6">
+            <h1>Log Cube</h1>
+            <h3>Log Cube: Log Scale Property Prediction from Seismic Reflectivity</h3>
+            <p>The availability of log data is paramount in shaping reservoir development strategies and enabling
+                well-informed decision-making. A greater volume of accessible logs directly enhances our understanding
+                of subsurface formations. However, it’s important to acknowledge that in practical scenarios, log values
+                are not uniformly accessible at all points.
+            </p>
+            <h3>ABOUT THE PRODUCT</h3>
+            <p>WAVERITY’s Log Cube product introduces a creative solution to tackle this challenge through an inventive
+                approach. By addressing the scarcity of log data, this product offers a unique means of enhancing our
+                understanding of subsurface structures. Notably, along with predicting log values, it provides valuable
+                insights into the associated uncertainties.
+            </p>
+            <div class="grid">
+                <p>
+                    The Log Cube product harnesses the power of machine learning methods to confidently estimate log
+                    values in regions where direct measurements are unavailable. This innovative solution introduces
+                    opportunities for advancing reservoir characterization and optimization efforts, representing a
+                    significant breakthrough in the field.
+                    <br><br>
+                    It allows for the comprehensive prediction of log parameters, including Gamma-Ray, Density, and
+                    more, throughout the entire field, all presented in a log scale.
+                </p>
+                <img src="assets/images/website_surface_3.png" alt="">
+            </div>
+            <div class="grid">
+                <figure>
+                    <img src="assets/images/log1.jpg" alt="" style="width:100%;">
+                    <figcaption>Input Seismic</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/images/log2.jpg" alt="" style="width:100%;">
+                    <figcaption style="color: var(--blue);">Generated Log Data</figcaption>
+                </figure>
+            </div>
+            <h3>KEY BENEFITS</h3>
+            <p>• Comprehensive Insights: Log Cube fills data gaps, providing a more complete understanding of subsurface
+                structures and enabling informed decision-making.
+                <br><br>
+                • Uncertainty Quantification: Our product delivers estimated log values along with quantified
+                uncertainty, facilitating robust analysis and risk assessment.
+                <br><br>
+                • Bridging Data Gaps: Log Cube connects seismic reflectivity and log data, expanding coverage and
+                enhancing the usefulness of available information.
+                <br><br>
+                • Optimized Reservoir Development: By unlocking log predictions in data-limited areas, Log Cube empowers
+                reservoir engineers to optimize well placement, improve models, and maximize production potential.
+            </p>
+            <h3>METHODOLOGY</h3>
+            <p>By utilizing advanced machine learning techniques, such as Convolutional Neural Networks, representing
+                data through Continuous Wavelet Transform (CWT), Log Cube estimates log values in areas where direct
+                measurements are unavailable.
+                <br><br>
+                Alongside, the algorithm predicts the uncertainties corresponding to the predictions for each point over
+                3D volume. This data-driven model is trained using real-world datasets to ensure reliable and consistent
+                log predictions across diverse scenarios.
+                <br><br>
+                At WAVERITY, we believe in collaborative partnerships. We actively engage with clients to customize Log
+                Cube according to their specific needs, integrating seamlessly into their existing workflows. This
+                collaborative approach maximizes the value derived from Log Cube’s log data prediction capabilities.
+                <br><br>
+                Empower your reservoir development and decision-making with Log Cube from WAVERITY. Contact us today to
+                explore how Log Cube can transform your understanding of subsurface structures and optimize reservoir
+                performance.
+            </p>
+            <video src="assets/videos/log-video.mp4" autoplay muted loop playsinline preload="auto"
+                onloadedmetadata="this.muted = true" width="100%"></video>
+        </div>
     </div>
 </div>
